--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="jumbotron">
-    <h1 class="display-4">Fazer Login</h1><br>
-    <div class="container"  align="center">
+    <h2 class="display-4">Fazer Login</h2><br>
+    <div class="container" >
         <div class="col-md-4 col-md-offset-3">
             <form action="" method="POST">
                 {{form.csrf_token}}
