Update de código com comentários

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,8 +12,9 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
 
+    <!-- Usar função url_for('nome_da_pasta', filename='nome_do_arquivo')-->
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename="css/bootstrap.min.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 
   </head>
 
