--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,8 @@
 
 
 {% block title %} {{ super() }} - Index {% endblock %} <!-- Define o bloco título e utiliza o comando super para
-                                                            pegar o nome da base e acrescentar ao nome defindo em seguida
+                                                            pegar o nome da base e acrescentar ao nome defindo
+                                                             em seguida
                                                                                 -->
 {% block content %} <!-- Inicio do bloco content referenciado na base-->
 
