--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %} {{ super() }} - Login {% endblock %}
 {% block content %}
 <div class="jumbotron">
     <h2 class="display-4">Fazer Login</h2><br>
